syntax = "proto3";

option go_package = "genproto/manager_service";

package manager_service;

// Service for managing administration
service ManagerAdministrationService {
    rpc Create(CreateManagerAdministration) returns (ManagerAdministration) {}
    rpc GetByID(ManagerAdministrationPrimaryKey) returns (ManagerAdministration) {}
    rpc GetAll(GetListManagerAdministrationRequest) returns (GetListManagerAdministrationResponse) {}
    rpc Update(UpdateManagerAdministration) returns (ManagerAdministration) {}
    rpc Delete(ManagerAdministrationPrimaryKey) returns (ManagerAdministrationPrimaryKey) {}
}


message ManagerAdministrationPrimaryKey {
    string id = 1;
}

message CreateManagerAdministration {
    string fullname = 1;
    string phone = 2;
    string password = 3;
    float salary = 4;
    float ielts_score = 5;
    string ielts_attempts_count = 6;
    string branch = 7;
}

message ManagerAdministration {
    string id = 1;
    string fullname = 2;
    string phone = 3;
    string password = 4;
    float salary = 5;
    float ielts_score = 6;
    string ielts_attempts_count = 7;
    string branch = 8;
    string created_at = 9;
    string updated_at = 10;
    string login =11;

}

message UpdateManagerAdministration {
    string id = 1;
    string fullname = 2;
    string phone = 3;
    string password = 4;
    float salary = 5;
    float ielts_score = 6;
    string ielts_attempts_count = 7;
    string branch = 8;
}

message GetListManagerAdministrationRequest {
    uint64 page = 1;
    uint64 limit = 2;
    string search = 3;
}

message GetListManagerAdministrationResponse {
    int64 count = 1;
    repeated ManagerAdministration manager_administrations = 2;
}
